fixing text-align for dd in rowdetails

--- a/src/main/webapp/css/components-bootstrap/table.css
+++ b/src/main/webapp/css/components-bootstrap/table.css
@@ -100,6 +100,10 @@
 	content: ":";
 }
 
+.table .rowdetails .rowdetails-content dd {
+	text-align: left;
+}
+
 .table .rowdetails-content:before {
     content: "";
     position: absolute;
